testing some basic routes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,7 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        <h1>Testing Vesta behavior with Symfony 4.2</h1>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
