--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -5,6 +5,9 @@
 {% block body %}
 <div class="example-wrapper">
     <h2>Index</h2>
-    <a href="{{path('contact')}}">Go contact</a>
+    <ul>
+        <li><a href="{{path('class_vehicle_index')}}">Go classes</a></li>
+        <li><a href="{{path('contact')}}">Go contact</a></li>
+    </ul>   
 </div>
 {% endblock %}
