--- a/templates/front/contact.html.twig
+++ b/templates/front/contact.html.twig
@@ -5,6 +5,6 @@
 {% block body %}
 <div class="example-wrapper">
     <h2>Contact</h2>
-    <a href="{{path('home')}}">Go home</a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur dolorem, vero fugiat saepe et, cumque dolore voluptatibus dicta laboriosam perspiciatis repellendus repellat nobis fugit neque. Nulla unde iure reprehenderit omnis?</p>
 </div>
 {% endblock %}
