--- a/templates/front/index.html.twig
+++ b/templates/front/index.html.twig
@@ -6,8 +6,11 @@
 <div class="example-wrapper">
     <h2>Index</h2>
     <ul>
-        <li><a href="{{path('class_vehicle_index')}}">Go classes</a></li>
-        <li><a href="{{path('contact')}}">Go contact</a></li>
-    </ul>   
+        <li>algo1</li>
+        <li>algo2</li>
+        <li>algo3</li>
+        <li>algo4</li>
+        <li>algo5</li>
+    </ul>
 </div>
 {% endblock %}
