--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,6 +7,11 @@
     </head>
     <body>
         <h1>Testing Vesta behavior with Symfony 4.2</h1>
+        <ul>
+            <li><a href="{{path('home')}}">Go HOME</a></li>
+            <li><a href="{{path('class_vehicle_index')}}">Go classes</a></li>
+            <li><a href="{{path('contact')}}">Go contact</a></li>
+        </ul>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
     </body>
