--- a/templates/inc/footer.html.twig
+++ b/templates/inc/footer.html.twig
@@ -22,6 +22,6 @@
                  
     </div>
     <div class="pieApp">
-        <span>Aplicación Infotaller <strong>Despiece</strong> 2017, Alguna otra información</span>
+        <span>Aplicación Infotaller <strong>Despiece</strong> {{date()|date('Y')}}, Alguna otra información</span>
     </div>
 </footer>
