--- a/templates/layout/programa/herramientas.html.twig
+++ b/templates/layout/programa/herramientas.html.twig
@@ -1,88 +1,88 @@
 {% extends 'layout/programa.html.twig' %}
 {% block submenu %}
     <ul class="submenu-programa">
-        <a href="{{ path('programa_submenu_calendario') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.calendario' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_agenda') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.agenda' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_agenda_taller') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.agenda.taller' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_impresos_trafico') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.impresos.trafico' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_matriculas') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.matriculas' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_telefonos_utilidad') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.telefonos.utilidad' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_fax') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.fax' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_sms_certificaciones') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.sms.certificaciones' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_envios') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.envios' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_sobres') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.sobres' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_visor_imagenes') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.visor.imagenes' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_video_seguridad') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.video.seguridad' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_carta_modelo') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.carta.modelo' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_herramientas_google') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.herramientas.google' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_sincronizar_datos') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.sincronizar.datos' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_gestionar_archivos') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.gestionar.archivos' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_asistencia_tecnica') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.asistencia.tecnica' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_gestion_documental') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.gestion.documental' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_notas') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.notas' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_administrador_web') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.administrador.web' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_analisis_web') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.analisis.web' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_administrador_bd') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.administrador.bd' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_neumaticos') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.neumaticos' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_gasolina_diesel') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.gasolina.diesel' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_auditoria') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.auditoria' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_divisas') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.divisas' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_buscar_empleado') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.buscar.empleado' | trans }}</li>
         </a>
-        <a href="{{ path('programa_submenu_financiacion') }}">
+        <a href="{{ path('program', {'grupo': 'configuracion', 'pagina': 'registro_vehiculos'}) }}">
             <li>{{ 'submenu.financiacion' | trans }}</li>
         </a>
     </ul>
